@@ -17,13 +17,17 @@ describe "Idiom" do
     end
     
     it "should create an Idiom for each Yaml file" do
+      @source = "path.yml"
+      Dir.stub!(:[]).and_return([@source])
       Idiom::Yaml.should_receive(:new).and_return(@translator)
-      Idiom::Base.translate(:source => "path.yml")
+      Idiom::Base.translate(:source => @source)
     end
     
     it "should create an Idiom for each YRB file" do
+      @source = "path.pres"
+      Dir.stub!(:[]).and_return([@source])
       Idiom::Yrb.should_receive(:new).and_return(@translator)
-      Idiom::Base.translate(:source => "path.pres")
+      Idiom::Base.translate(:source => @source)
     end
   end
   
@@ -82,22 +86,6 @@ SECOND=second key
       @file.should_receive(:puts).with(/SECOND=translated second key/)
       Idiom::Yrb.new(:source => @source).generate
     end
-    
-    # describe "key exists" do
-    #   before(:each) do
-    #     YRB.stub!(:load_file).and_return({"FIRST" => "old translated first key"})
-    #   end
-    #   
-    #   it "should not translate a key that is already translated" do
-    #     @file.should_not_receive(:puts).with(/FIRST=translated first key/)
-    #     Idiom::Yrb.new(:source => @source).generate
-    #   end
-    #   
-    #   it "should translate a key that is already translated if overwrite is true" do
-    #     @file.should_receive(:puts).with(/FIRST=translated first key/)
-    #     Idiom::Yrb.new(:source => @source, :overwrite => true).generate
-    #   end
-    # end
     
     describe "languages" do
       it "should only translate the specified set of languages" do
@@ -169,24 +157,6 @@ second: second key
       @file.should_receive(:puts).with(/second: translated second key/)
       Idiom::Yaml.new(:source => @source).generate
     end
-    
-    # describe "key exists" do
-    #   before(:each) do
-    #     Dir.stub!(:[]).and_return(["./translations/path_lang-CODE.yml"])
-    #     File.should_receive(:exists?).with("./translations/path_lang-CODE.yml").and_return(true)
-    #     YAML.should_receive(:load_file).and_return({"first" => "old translated first key"})
-    #   end
-    #   
-    #   it "should not translate a key that is already translated" do
-    #     @file.should_not_receive(:puts).with(/first: translated first key/)
-    #     Idiom::Yaml.new(:source => @source).generate
-    #   end
-    #   
-    #   it "should translate a key that is already translated if overwrite is true" do
-    #     @file.should_receive(:puts).with(/first: translated first key/)
-    #     Idiom::Yaml.new(:source => @source, :overwrite => true).generate
-    #   end
-    # end
     
     describe "languages" do
       it "should only translate the specified set of languages" do
