@@ -1,3 +1,7 @@
+== in Git
+  * minor enhancements
+    * use wildcards for Idiom::Base.translate
+
 == 0.0.2 (1/22/2010)
   * major enhancements
     * don't write duplicate keys
